# amg-solver

./: .gitignore  LICENSE  README.md  gitignore  pyproject.toml
.spyproject/config/: workspace.ini
.spyproject/config/backups/: workspace.ini.bak
amg/: __init__.py  gnn_convergence_targets.py  gnn_model.py  gnn_solver.py  ml_features.py  ml_solver.py  ml_weight_predictor.py  mlp_features.py  mlp_model.py  mlp_solver.py  prolongation.py  result.py  smoothers.py  solver.py  utils.py
benchmarks/: amg_weight_predictor.pth  run_benchmark.py  run_benchmark_gnn.py  run_benchmark_ml.py  run_benchmark_mlp.py  solutionCheck.py
someFIles/: utils.py
tests/: conftest.py  test_solver.py
training/: generate_dataset.py  train_gnn.py
training/models/: gnn_model_attn.pth  gnn_model_attn_proxy.pth  mlP_model_suitesparse.pth
