[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "amg-solver"
version = "0.4.0"
description = "Two-level Algebraic Multigrid (AMG) solver with classical and ML/GNN-enhanced prolongation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Xhensilda Allka", email = "" }
]
keywords = [
    "AMG", "multigrid", "sparse linear solver", "METIS",
    "scientific computing", "FEM", "machine learning", "GNN",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pymetis>=2023.1",
    "pandas>=1.5",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
all = [
    "torch>=2.0",
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["amg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
